Fix 'What is Scale' headline alignment on mobile

--- a/style.css
+++ b/style.css
@@ -50,11 +50,21 @@ h3,
 }
 
 .overlapping-headline {
-    position: absolute;
-    top: -10%;
-    left: -15%;
+    position: relative;
     z-index: 10;
     pointer-events: none;
+    text-align: center;
+    width: 100%;
+}
+
+@media (min-width: 1024px) {
+    .overlapping-headline {
+        position: absolute;
+        top: -10%;
+        left: -15%;
+        text-align: left;
+        width: auto;
+    }
 }
 
 .circle-panel {
